--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,108 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
+  margin: 0px;
   box-sizing: border-box;
-  padding: 0;
+}
+
+body {
+  background-image: url(../images/abstract.jpg);
+  background-size: cover;
+}
+
+#title {
+  text-align: center;
+  font-family: Brush Script MT, "Arial Narrow Bold", sans-serif;
+  font-size: 50px;
+  color: white;
+  background-color: #00a6ed;
+}
+
+.selector {
+  border: none;
+  background: none;
   margin: 0;
+  padding: 0;
+  font-size: 30px;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.date {
+  font-size: 30px;
+  font-family: fantasy;
+  padding: 0px 10px;
+  background-color: #00a6ed;
+  color: white;
+  border-radius: 5px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+#date-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px 0px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+#calendar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5px;
+  width: 550px;
+  margin: 10px;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.selected-day-box {
+  background-color: #00a6ed;
+  width: 70px;
+  height: 40px;
+  text-align: center;
+  font-family: fantasy;
+  font-size: 20px;
+  color: white;
+  border-radius: 5px;
+  border: 2px solid #005a81;
+}
+
+.day-box {
+  background-color: #747e88;
+  width: 70px;
+  height: 40px;
+  text-align: center;
+  font-family: fantasy;
+  font-size: 20px;
+  color: white;
+  border-radius: 5px;
+}
+
+.entryBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.label {
+  text-align: center;
+  color: white;
+  font-family: Brush Script MT, "Arial Narrow Bold", sans-serif;
+  font-size: 35px;
+  background-color: #00a6ed;
+  width: 400px;
+}
+
+.inputBox {
+  max-width: 400px;
+  min-width: 400px;
+  min-height: 100px;
+  margin: 0px 0px 10px 0px;
+  background-color: white;
+  border: 1px solid #00a6ed;
+  font-family: Brush Script MT, "Arial Narrow Bold", sans-serif;
+  font-size: 20px;
+}
+
+.submitButton {
+  background-color: #00a6ed;
+  color: white;
+  font-family: fantasy;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
 }
