--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,4 +105,9 @@ body {
   border: 0;
   padding: 8px;
   border-radius: 8px;
+  visibility: visible;
+}
+
+.hiddenButton {
+  visibility: hidden;
 }
